@@ -219,14 +219,11 @@ public class MongoDbCdcInitializer {
       final Supplier<AutoCloseableIterator<AirbyteMessage>> incrementalIteratorSupplier = () -> handler.getIncrementalIterators(
           propertiesManager, eventConverter, cdcSavedInfoFetcher, mongoDbCdcStateHandler);
 
-      return Collections.singletonList(
-          AutoCloseableIterators.concatWithEagerClose(
-              Stream.of(
+      return Stream.of(
                   cdcStreamsStartStatusEmitters,
                   Collections.singletonList(initialSnapshotIterator),
                   Collections.singletonList(AutoCloseableIterators.lazyIterator(incrementalIteratorSupplier, null)),
-                  cdcStreamsCompleteStatusEmitters).flatMap(Collection::stream).collect(Collectors.toList()),
-              AirbyteTraceMessageUtility::emitStreamStatusTrace));
+                  cdcStreamsCompleteStatusEmitters).flatMap(Collection::stream).toList();
     } else if (initialSnapshotIterators.isEmpty()) {
       LOGGER.info("Initial load has finished completely - only reading the oplog");
       /*
@@ -240,13 +237,10 @@ public class MongoDbCdcInitializer {
           new MongoDbDebeziumEventConverter(cdcMetadataInjector, incrementalOnlyStreamsCatalog, emittedAt, config.getDatabaseConfig());
       final Supplier<AutoCloseableIterator<AirbyteMessage>> incrementalIteratorSupplier = () -> handler.getIncrementalIterators(
           propertiesManager, eventConverter, cdcSavedInfoFetcher, mongoDbCdcStateHandler);
-      return Collections.singletonList(
-          AutoCloseableIterators.concatWithEagerClose(
-              Stream.of(
+      return Stream.of(
                   cdcStreamsStartStatusEmitters,
                   Collections.singletonList(AutoCloseableIterators.lazyIterator(incrementalIteratorSupplier, null)),
-                  cdcStreamsCompleteStatusEmitters).flatMap(Collection::stream).collect(Collectors.toList()),
-              AirbyteTraceMessageUtility::emitStreamStatusTrace));
+                  cdcStreamsCompleteStatusEmitters).flatMap(Collection::stream).toList();
     } else {
       LOGGER.info("Initial load is in progress - reading oplog first and then resuming with initial load.");
       /*
@@ -265,15 +259,12 @@ public class MongoDbCdcInitializer {
           new MongoDbDebeziumEventConverter(cdcMetadataInjector, incrementalOnlyStreamsCatalog, emittedAt, config.getDatabaseConfig());
       final Supplier<AutoCloseableIterator<AirbyteMessage>> incrementalIteratorSupplier = () -> handler.getIncrementalIterators(
           propertiesManager, eventConverter, cdcSavedInfoFetcher, mongoDbCdcStateHandler);
-      return Collections.singletonList(
-          AutoCloseableIterators.concatWithEagerClose(
-              Stream.of(
-                  cdcStreamsStartStatusEmitters,
-                  Collections.singletonList(AutoCloseableIterators.lazyIterator(incrementalIteratorSupplier, null)),
-                  Collections.singletonList(initialSnapshotIterator),
-                  cdcStreamsCompleteStatusEmitters)
-                  .flatMap(Collection::stream).collect(Collectors.toList()),
-              AirbyteTraceMessageUtility::emitStreamStatusTrace));
+      return Stream.of(
+                      cdcStreamsStartStatusEmitters,
+                      Collections.singletonList(AutoCloseableIterators.lazyIterator(incrementalIteratorSupplier, null)),
+                      Collections.singletonList(initialSnapshotIterator),
+                      cdcStreamsCompleteStatusEmitters)
+              .flatMap(Collection::stream).toList();
     }
   }
 
